--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,5 @@
   <body>
     <div id="root"></div>
   </body>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </html>
